--- a/SWP/configs/DEFAULT.ini
+++ b/SWP/configs/DEFAULT.ini
@@ -1,19 +1,25 @@
 [DAQ]
 DeviceName = default
 
+[WAVEMETER]
+IP = 127.0.0.1
+Port = 65432
+Laser1 = seed1
+Laser2 = seed2
+
 [CAVITY]
 RMS = 30
 LockThreshold = 0.05
 PeakCriterion = 0.35
 ScanTime = 10
-ScanSamples = 500
+ScanSamples = 520
 ScanOffset = 1
-ScanAmplitude = 2
+ScanAmplitude = 2.3
 PGain = 0.1
 IGain = 0.04
 FSR = 1
-Wavelength = 852.3563825
-Lockpoint = 4
+Wavelength = 852.34727582
+Lockpoint = 4.5
 MinVoltage = -2
 MaxVoltage = 10
 InputChannel = 0
@@ -25,13 +31,14 @@ LockpointMHz = 0
 Wavelength = default
 PeakCriterion = 0.4
 LockThreshold = 1.2
-PGain = 2
-IGain = 1
+PGain = 2.2
+IGain = 1.1
 MinVoltage = 0
 MaxVoltage = 5
 SetVoltage = 1.2
 InputChannel = 1
 OutputChannel = 1
+PowerChannel = 4
 
 [LASER2]
 LockpointR = 0.5
@@ -39,10 +46,11 @@ LockpointMHz = 0
 Wavelength = default
 PeakCriterion = 0.4
 LockThreshold = 1
-PGain = 0.3
-IGain = 0.15
+PGain = 2.2
+IGain = 1.1
 MinVoltage = 0
 MaxVoltage = 5
 SetVoltage = 1
 InputChannel = 2
 OutputChannel = 2
+PowerChannel = 5
