--- a/SWP/configs/DEFAULT_Sim.ini
+++ b/SWP/configs/DEFAULT_Sim.ini
@@ -1,16 +1,22 @@
 [DAQ]
 DeviceName = default
 
+[WAVEMETER]
+IP = 127.0.0.1
+Port = 65432
+Laser1 = seed1
+Laser2 = seed2
+
 [CAVITY]
 RMS = 30
-LockThreshold = 0.1
+LockThreshold = 1
 PeakCriterion = 0.35
 ScanTime = 20
 ScanSamples = 400
 ScanOffset = -1
 ScanAmplitude = 2
-PGain = 2
-IGain = 0.5
+PGain = 5
+IGain = 1
 FSR = 1
 Wavelength = 852.3563825
 Lockpoint = 5
@@ -32,6 +38,7 @@ MaxVoltage = 5
 SetVoltage = 1.3
 InputChannel = 1
 OutputChannel = 1
+PowerChannel = 4
 
 [LASER2]
 LockpointR = 0.5
@@ -46,3 +53,4 @@ MaxVoltage = 5
 SetVoltage = 3
 InputChannel = 2
 OutputChannel = 2
+PowerChannel = 5
