added support for naming seed lasers

--- a/SWP/configs/DEFAULT.ini
+++ b/SWP/configs/DEFAULT.ini
@@ -26,6 +26,7 @@ InputChannel = 0
 OutputChannel = 0
 
 [LASER1]
+name = 0
 LockpointR = 0.5
 LockpointMHz = 0
 Wavelength = default
@@ -41,6 +42,7 @@ OutputChannel = 1
 PowerChannel = 4
 
 [LASER2]
+name = 0
 LockpointR = 0.5
 LockpointMHz = 0
 Wavelength = default
