--- a/SWP/configs/Molecular beam intensity monitoring.ini
+++ b/SWP/configs/Molecular beam intensity monitoring.ini
@@ -1,5 +1,5 @@
 [DAQ]
-DeviceName = default
+DeviceName = FreqLockDAQ
 
 [WAVEMETER]
 IP = 172.28.173.109
@@ -9,7 +9,7 @@ Laser2 = seed2
 
 [CAVITY]
 RMS = 30
-LockThreshold = 1.5
+LockThreshold = 1.8
 PeakCriterion = 0.35
 ScanTime = 10
 ScanSamples = 520
@@ -26,6 +26,7 @@ InputChannel = 0
 OutputChannel = 0
 
 [LASER1]
+Name = Seed 1
 LockpointR = 0.9908791209515853
 LockpointMHz = 385.0
 Wavelength = 1086.7519
@@ -41,6 +42,7 @@ OutputChannel = 1
 PowerChannel = 4
 
 [LASER2]
+Name = Seed 2
 LockpointR = 0.5
 LockpointMHz = 0.0
 Wavelength = 1086.7338
