--- a/SWP/configs/RC_P2_R2.ini
+++ b/SWP/configs/RC_P2_R2.ini
@@ -13,12 +13,12 @@ LockThreshold = 1.8
 PeakCriterion = 0.35
 ScanTime = 10
 ScanSamples = 520
-ScanOffset = 1.0022435238413863
+ScanOffset = -0.38340119502953895
 ScanAmplitude = 2.3
-PGain = 1
+PGain = 1.05
 IGain = 0.04
 FSR = 1.0
-Wavelength = 852.34727582
+Wavelength = 852.3565294
 Lockpoint = 4.5
 MinVoltage = -2.0
 MaxVoltage = 10.0
@@ -26,33 +26,34 @@ InputChannel = 0
 OutputChannel = 0
 
 [LASER1]
-Name = Seed 1
-LockpointR = 0.9908791209515853
-LockpointMHz = 385.0
-Wavelength = 1086.7519
+Name = 
+LockpointR = 0.7554466550802676
+LockpointMHz = 200.3499999999975
+Wavelength = 0.005
 PeakCriterion = 0.4
 LockThreshold = 1.2
-PGain = 2.2
+PGain = 2.25
 IGain = 1.1
 MinVoltage = 0.0
 MaxVoltage = 5.0
-SetVoltage = 1.1756679995194554
+SetVoltage = 2.3024662987940383
 InputChannel = 1
 OutputChannel = 1
 PowerChannel = 4
 
 [LASER2]
-Name = Seed 2
-LockpointR = 0.5
-LockpointMHz = 0.0
-Wavelength = 1086.7338
+Name = 
+LockpointR = 0.7887879579519903
+LockpointMHz = 226.4999999999997
+Wavelength = 0.005
 PeakCriterion = 0.4
 LockThreshold = 1.0
 PGain = 2.2
 IGain = 1.1
 MinVoltage = 0.0
 MaxVoltage = 5.0
-SetVoltage = 1.0
+SetVoltage = 0.8992806331987345
 InputChannel = 2
 OutputChannel = 2
 PowerChannel = 5
+
