--- a/SWP/configs/RC_P2_Q1.ini
+++ b/SWP/configs/RC_P2_Q1.ini
@@ -13,10 +13,10 @@ LockThreshold = 1.8
 PeakCriterion = 0.35
 ScanTime = 10
 ScanSamples = 1500
-ScanOffset = 1.73
+ScanOffset = 0.8788394429752967
 ScanAmplitude = 2.1
-PGain = 2
-IGain = 5
+PGain = 2.0
+IGain = 5.0
 FSR = 1.0
 Wavelength = 852.3565294
 Lockpoint = 4.5
@@ -26,33 +26,34 @@ InputChannel = 0
 OutputChannel = 0
 
 [LASER1]
-Name = Seed 1
-LockpointR = 0.566
-LockpointMHz = -52
-Wavelength = 1086.7605
+Name = 
+LockpointR = 1.1056326486562842
+LockpointMHz = -475.0
+Wavelength = 0.005
 PeakCriterion = 0.4
 LockThreshold = 1.0
 PGain = 3.0
 IGain = 10.0
 MinVoltage = 0.0
 MaxVoltage = 5.0
-SetVoltage = 4.105
+SetVoltage = 3.595511854525784
 InputChannel = 1
 OutputChannel = 1
 PowerChannel = 4
 
 [LASER2]
 Name = Seed 2
-LockpointR = 0.181
-LockpointMHz = 250
-Wavelength = 1086.7133000000001
+LockpointR = 0.7317890651468038
+LockpointMHz = -181.79895440867278
+Wavelength = 1086.7291
 PeakCriterion = 0.4
 LockThreshold = 1.0
 PGain = 3.0
 IGain = 10.0
 MinVoltage = 0.0
 MaxVoltage = 5.0
-SetVoltage = 2.301
+SetVoltage = 2.999497650795484
 InputChannel = 2
 OutputChannel = 2
 PowerChannel = 5
+
