--- a/SWP/configs/RC_2020_11_19.ini
+++ b/SWP/configs/RC_2020_11_19.ini
@@ -13,7 +13,7 @@ LockThreshold = 1.8
 PeakCriterion = 0.35
 ScanTime = 10
 ScanSamples = 1500
-ScanOffset = 2.341078723143362
+ScanOffset = 1.6513976803595491
 ScanAmplitude = 2.1
 PGain = 2.0
 IGain = 5.0
@@ -27,24 +27,24 @@ OutputChannel = 0
 
 [LASER1]
 Name = Seed 1
-LockpointR = 0.6109259961515815
-LockpointMHz = -86.99968254502801
-Wavelength = 1086.7683
+LockpointR = 0.8544507256988698
+LockpointMHz = -278.00000000000006
+Wavelength = 1086.7568
 PeakCriterion = 0.4
 LockThreshold = 1.0
 PGain = 3.0
 IGain = 10.0
 MinVoltage = 0.0
 MaxVoltage = 5.0
-SetVoltage = 4.0468762424569755
+SetVoltage = 2.909309727245882
 InputChannel = 1
 OutputChannel = 1
 PowerChannel = 4
 
 [LASER2]
 Name = Seed 2
-LockpointR = 0.6466207938689371
-LockpointMHz = -115.00000000000001
+LockpointR = 0.8346778990486607
+LockpointMHz = -262.5
 Wavelength = 1086.7234
 PeakCriterion = 0.4
 LockThreshold = 1.0
@@ -52,7 +52,7 @@ PGain = 3.0
 IGain = 10.0
 MinVoltage = 0.0
 MaxVoltage = 5.0
-SetVoltage = 0.537191306741419
+SetVoltage = 0.6299445854906073
 InputChannel = 2
 OutputChannel = 2
 PowerChannel = 5
